--- a/views/index.mustache
+++ b/views/index.mustache
@@ -5,6 +5,6 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <h2>Here are things that you get to see becuase you are logged in</h2>
+    <h2>Logged in as {{username}}</h2>
   </body>
 </html>
